<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <ImageView
        android:id="@+id/imgEncabezado"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:src="@drawable/cabe"
        android:contentDescription="@string/descripcionEncabezado" />
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="40dip" >
        
        <TextView android:id="@+id/tituloMenuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloMenuPrincipal"
        android:textStyle="bold"
        android:textSize="20dip" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="20dip" >

        <ImageButton
            android:id="@+id/cambiarDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_datos"
            android:contentDescription="@string/descripcionActualizaDatos"
            android:minHeight="90dip"
            android:minWidth="90dip" />
        
        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dip"
        android:src="@drawable/separador"
        android:contentDescription="@string/descripcionSeparador" />
        
        <ImageButton android:id="@+id/solicitudes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_solicitudes"
            android:contentDescription="@string/descripcionListaSolicitudes" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="20dip" >
        
        <ImageButton android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_pass"
            android:contentDescription="@string/descripcionCambioPass"
            android:minWidth="95dip"
            android:minHeight="95dip" />
        
        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dip"
        android:src="@drawable/separador"
        android:contentDescription="@string/descripcionSeparador" />
        
        <ImageButton android:id="@+id/salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_salir"
            android:contentDescription="@string/descripcionSalida" />
        
    </LinearLayout>

</LinearLayout>