<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dip" >
    
    	<ImageView
	        android:id="@+id/imgEncabezado"
	        android:layout_width="fill_parent"
	        android:layout_height="100dip"
	        android:src="@drawable/cabe"
	        android:contentDescription="@string/descripcionEncabezado" />
	    
	    <LinearLayout android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="10dip" >
	        
	        <TextView android:id="@+id/detalleSolicitudTitulo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/tituloDetalleSolicitud"
	        android:textStyle="bold"
	        android:textSize="20dip" />
	        
	    </LinearLayout>
	    
	    <ScrollView android:id="@+id/scrollDetalleSolicitud"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	        
	        <LinearLayout android:id="@+id/contenedorDetalleSolicitud" 
	        	android:orientation="vertical"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="10dip" >
	    
			    <TextView android:id="@+id/dsNombreFlujo"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/dsFlujo"
			        android:textStyle="bold" />
			    
			    <TextView android:id="@+id/dsValorNombreFlujo"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingTop="5dip"
			        android:paddingBottom="5dip" />
			    
			    <TextView android:id="@+id/dsNombreEstado"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/dsEstado"
			        android:textStyle="bold" />
			    
			    <TextView android:id="@+id/dsValorNombreEstado"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingTop="5dip"
			        android:paddingBottom="5dip" />
			    
			    <TextView android:id="@+id/dsNombreCreador"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/dsCreador"
			        android:textStyle="bold" />
			    
			    <TextView android:id="@+id/dsValorNombreCreador"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingTop="5dip"
			        android:paddingBottom="5dip" />
			    
			    <TextView android:id="@+id/dsFechaSolicitud"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/dsFecha"
			        android:textStyle="bold" />
			    
			    <TextView android:id="@+id/dsValorFechaSolicitud"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingTop="5dip"
			        android:paddingBottom="5dip" />
			    
			    <TextView android:id="@+id/dsNombreCiudad"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/dsCiudad"
			        android:textStyle="bold" />
			    
			    <TextView android:id="@+id/dsValorNombreCiudad"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:paddingTop="5dip"
			        android:paddingBottom="5dip" />
			    
			    <TextView android:id="@+id/dsTituloFormulario"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/tituloFormSolicitud"
			        android:textStyle="bold"
			        android:gravity="center"
			        android:textSize="18dip"
			        android:paddingTop="10dip"
			        android:paddingBottom="10dip" />
	    
	    	</LinearLayout>
	    
	    </ScrollView>
</LinearLayout>