<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >
    
    <ImageView
	        android:id="@+id/imgEncabezado"
	        android:layout_width="fill_parent"
	        android:layout_height="100dip"
	        android:src="@drawable/cabe"
	        android:contentDescription="@string/descripcionEncabezado" />
	    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip" >
        
        <TextView android:id="@+id/tituloActualizaDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloActualizaDatos"
        android:textStyle="bold"
        android:textSize="20dip" />
        
    </LinearLayout>
    
    <ScrollView android:id="@+id/scrollActualizaClave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dip" >
            
            <TextView android:id="@+id/acTextoClaveActual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/acClaveActual"
                android:textStyle="bold" />
            
            <EditText android:id="@+id/acCampoClaveActual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            
            <TextView android:id="@+id/acTextoClaveNueva1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/acClaveNueva1"
                android:textStyle="bold" />
            
            <EditText android:id="@+id/acCampoClaveNueva1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            
            <TextView android:id="@+id/acTextoClaveNueva2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/acClaveNueva2"
                android:textStyle="bold" />
            
            <EditText android:id="@+id/acCampoClaveNueva2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            
            <Button android:id="@+id/btActualizaClave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acTituloBoton"
                android:gravity="center" />
            
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>