<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dip" >
    
    <ImageView
        android:id="@+id/imgEncabezado"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:src="@drawable/cabe"
        android:contentDescription="@string/descripcionEncabezado"
        android:paddingBottom="10dip" />
    
    <ScrollView android:id="@+id/scrollLogin" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    
		<LinearLayout android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingTop="5dip" >
	        
		    <TextView android:id="@+id/TextoUsuario"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/UsuarioLogin"
		        android:textStyle="bold" />
		    
		    <EditText android:id="@+id/CajaUsuario"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text" />
		    
		    <TextView android:id="@+id/TextoPass"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/PassLogin"
		        android:textStyle="bold" />
		    
		    <EditText android:id="@+id/CajaPass"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword" />
		        
		    <Button android:id="@+id/BtIniciaSesion"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/botonLogin"
		        android:gravity="center" />
		    
		    
		    <TextView android:id="@+id/Mensaje"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="10dip"
		        android:textStyle="bold"
		        android:gravity="center" />
	        
	    </LinearLayout>
    
	</ScrollView>
    
</LinearLayout>